syntax = "proto3";

package commontype;

option java_multiple_files = true;
option java_package = "bifromq.re.commontype";
option java_outer_classname = "MessageProto";
option optimize_for = SPEED;

enum QoS{
  AT_MOST_ONCE = 0;
  AT_LEAST_ONCE = 1;
  EXACTLY_ONCE = 2;
}

message Message {
  QoS qos = 1;
  string topic = 2;
  bytes payload = 3;
}